--- a/Yatzy/Yatzy.css
+++ b/Yatzy/Yatzy.css
@@ -1,44 +1,86 @@
-#containerAll {
+.containerAll {
   border: 1px solid rgb(0, 0, 0);
   margin: 30px auto;
   padding: 10px;
   background-color: whitesmoke;
-  width: 500px;
+  width: 450px;
   display: grid;
-  grid-template-rows: 200px 1000px;
+  gap: 10px;
 }
 
-#containerDice {
+.containerDice {
+  padding: 40px;
+  background-color: whitesmoke;
+  border: 1px solid grey;
+}
+
+.containerScore {
   border: 1px solid rgb(0, 0, 0);
   padding: 10px;
   background-color: whitesmoke;
 
-  grid-area: 1/1;
-
   display: grid;
-  grid-template-columns: 40px 100px 40px;
-  grid-template-rows: 30px 30px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 25px;
+  column-gap: 5px;
 }
 
-#containerScore {
-  border: 1px solid rgb(0, 0, 0);
-  padding: 10px;
-  background-color: whitesmoke;
-  grid-area: 2/1;
-
-  display: grid;
-  grid-template-columns: repeat(4, 30px);
-  grid-template-rows: repeat(15, 50px);
+.YatzyLabel {
+  display: flex;
+  align-items: center;
+  gap: 5px
 }
 
-.Score {
-  grid-column-start: 1;
-  grid-column-end: 15;
+.YatzyLabel input {
+  width: 50px;
+  justify-self: end;
 }
 
-.Sum {
-grid-column-start: 3 ;
-grid-column-end: 3;
-grid-row-start: 6;
-grid-row-end: 6;
+.ScoreLabel {
+  justify-content: space-between;
+  grid-column: 1 / 3;
+
+}
+
+.SumLabel {
+  grid-column: 3;
+  grid-row: 6
+}
+
+.BonusLabel {
+  grid-column: 4;
+  grid-row: 6
+}
+
+.TotalLabel {
+  grid-column: 4;
+}
+
+.dice{
+  display: flex;
+  justify-content:space-between;
+  gap: 5px;
+}
+
+.die.saved{
+  border: red solid 2px;
+}
+
+.die img{
+  width: 50px;
+  height: 50px;
+}
+
+.Rollcounter, .RollButton{
+grid-row: 2;
+}
+
+.roller {
+  margin-top: 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.Rollbutton {
+  padding: 20px 40px;
 }
