--- a/Eksamensprogrammering/spm5/templates/index.pug
+++ b/Eksamensprogrammering/spm5/templates/index.pug
@@ -2,5 +2,17 @@ doctype html
 html
     head
         title Express-app 3
-        script(src='index.js')
+        script(src='index.js' defer)
     body
+        input(type="text" name = "navn" id="navn")
+        input(type="text" name = "tlfnummer" id="tlfnummer")
+        button(type="button" class="tilfoj") Tilføj
+
+        table(style='width:50%', border='1' id="kartotek")
+            tr
+                th Navn
+                th Tlfnummer 
+                each person in personer 
+                    tr
+                        td=person.name 
+                        td=person.tlfnummer  
